[package]
name = "cs-645-research-paper"
version = "0.1.0"
edition = "2021"

[dependencies]
fastrand = "1.9.0"
piet = "0.6.2"
slab = "0.4.8"
theo = { git = "https://github.com/notgull/theo.git", version = "0.1.0", default-features = false, features = ["x11", "wgl", "glx", "gl", "egl"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = "0.3.16"
winit = { version = "0.28.3", default-features = false, features = ["x11"] }
